# ai-news-agent

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  CLOUDFLARE_DNS_FIX.md  CLOUDFLARE_SETUP.md  DEPLOYMENT.md  DEVELOPMENT.md  INFRASTRUCTURE_SUMMARY.md  LOCAL_TESTING.md  Makefile  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  REFACTORING.md  TEST_ENV.md  TEST_WORKFLOW.md  WORKFLOW_SETUP.md  analyzer.py  check_links.py  cloudflare-pages.json  config.py  coverage.json  generate_html.py  main.py  package.json  pyproject.toml  pytest.ini  requirements.txt  score_coding_assistants.py  trend_analyzer.py  update_capabilities.py  validate_links.py  wrangler.toml
.github/workflows/: check_links.yml  daily.yml  deploy_dev.yml  deploy_prod.yml  monthly-capability-update.yml  preview.yml
astro-redesign/: .gitignore  DESIGN_SYSTEM.md  astro.config.mjs  package.json  tailwind.config.mjs
collectors/: __init__.py  github.py  hackernews.py  producthunt.py  reddit.py
data/: tool_links.json
data/capability_monitor/: current_capabilities.json  current_table.md  previous_capabilities.json
docs/: DATA_SOURCES.md  PREMIUM_STYLE_UPGRADE.md  STYLE_UPGRADE_SUMMARY.md  faq.html  index.html
documentation/: COMPONENT_SPECIFICATIONS.md  DESIGN_TOKENS.md  REDESIGN_SUMMARY.md  UX_REDESIGN_PROPOSAL.md
functions/: healthcheck.js
infra/: README.md  __init__.py
output/: capability_report.md  index.html  rankings_dummy.json
scripts/: serve_local.sh  start_test_env.sh  test_full.sh  test_quick.sh  test_ui.sh
tests/: README.md  conftest.py  test_expand_button.html
(+64 files in other folders)
