[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-agent"
version = "1.0.0"
description = "AI News Agent - Collects and analyzes AI tool mentions from Hacker News and GitHub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ai-news-agent = "ai_news_agent.main:main"
generate-html = "ai_news_agent.generator.generate_html:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]


